<resources>
    <string name="app_name">MusicApp</string>
    <string name="nh_c_c_a_t_i">Nhạc của tôi</string>
    <string name="xem">Watch</string>
    <string name="y_u_th_ch">Yêu thích</string>
    <string name="g_n_y">Gần đây</string>
    <string name="danh_s_ch_ph_t">Danh sách phát sau</string>
    <string name="ph_t_ng_u_nhi_n">Phát ngẫu nhiên</string>
    <string name="b_i_h_t">Bài hát</string>
    <string name="song_name">song_name</string>
    <string name="singername">singername</string>
    <string name="nhaccuatui_com">NhacCuaTui.com</string>
    <string name="truyen_co_tich_viet_nam">Truyen co tich viet nam</string>
    <string name="music">Music</string>
    <string name="t_m_ki_m_b_i_h_t_danh_s_ch_ph_t_v_ngh_s">Tìm kiếm bài hát, danh sách phát và nghệ sĩ</string>
    <string name="va">VA</string>
    <string name="_00_00">00:00</string>
    <string name="_02_05">02:05</string>
    <string name="favorite">Favorite</string>
    <string name="current">Current</string>
    <string name="ten_bai_hat">Ten Bai Hat</string>
    <string name="c_i_t">Cài đặt</string>
    <string name="ch_nh_s_ch_ri_ng_t">Chính sách riêng tư</string>
    <string name="trang_ch">Trang chủ</string>
    <string name="my_music">My Music</string>
    <string name="chia_s">Chia sẻ</string>
    <string name="dich_v_v_c_i_t">Dịch vụ và cài đặt</string>
    <string name="t_i_kho_n">Tài khoản</string>
    <string name="t_i_kho_n_mi">Tài khoản Mi</string>
    <string name="_221299">221299</string>
    <string name="c_i_t_n_ng_cao">Cài đặt nâng cao</string>
    <string name="h_n_gi_t_t_b_l_c_cho_t_p_tin_v_v">Hẹn giờ tắt, bộ lọc cho tập tin v.v..</string>
    <string name="ch_n_n_t_i">Chế độ nền tối</string>
    <string name="th_o_thu_n_ng_i_d_ng">Thảo thuận người dùng</string>
    <string name="phi_n_b_n">Phiên bản</string>
    <string name="phi_n_b_n_hi_n_t_i_6_3_39i_853">Phiên bản hiện tại 6.3.39i-853</string>
    <string name="t_ng_c_p_nh_t">Tự động cập nhật</string>
    <string name="s_p_x_p_b_i_h_t">Sắp xếp bài hát</string>
    <string name="theo_th_i_gian_th_m">Theo thời gian thêm</string>
    <string name="theo_t_n">Theo tên</string>
    <string name="theo_s_l_n_ph_t">Theo số lần đã phát</string>
    <string name="hi_n_th_nh_c_tr_n_m_y">Hiển thị nhạc trên máy</string>
    <string name="theo_b_i_h_t">Theo bài hát</string>
    <string name="theo_ca_s">Theo ca sĩ</string>
    <string name="theo_album">Theo album</string>
    <string name="theo_th_m_c">Theo thư mục</string>
    <string name="t_m_ki_m_b_i_h_tr_n_thi_t_b">Tìm kiếm bài hát trên thiết bị</string>
    <string name="t_i_kho_n_mi_6517539812">Tài khoản Mi: 6517539812</string>
    <string name="l_ch_s_t_m_ki_m">Lịch sử tìm kiếm</string>
    <string name="h">h</string>
    <string name="_0_m_c_c_ch_n">0 mục được chọn</string>
    <string name="ph_t_sau">Phát sau</string>
    <string name="th_m_v_o_danh_s_ch">Thêm vào danh sách</string>
    <string name="danh_s_ch_m_i">Danh sách mới</string>
    <string name="x_a">Xóa</string>
    <string name="x_a_1_b_i_h_t">Xóa 1 bài hát?</string>
    <string name="h_y">Hủy</string>
    <string name="nh_c">Nhạc</string>
    <string name="v_n">Vấn đề</string>
    <string name="ki_n_ngh">Kiến nghị</string>
    <string name="m_t">Mô tả vấn đề bạn gặp phải ở đây</string>
    <string name="th_m_nh_ho_c_video_ng_n">Thêm ảnh hoặc video ngắn</string>
    <string name="th_i_gian">Thời gian</string>
    <string name="y_u_c_u">Yêu cầu</string>
    <string name="s_i_n_tho_i_email">Số điện thoại/Email</string>
    <string name="th_m_nh_t_k">Thêm nhật ký</string>
    <string name="g_i">Gửi</string>
    <string name="kh_ng_t_m_th_y_k_t_qu">Không tìm thấy kết quả</string>
    <string name="t_o_danh_s_ch_ph_t">Tạo danh sách phát</string>
    <string name="t_n_danh_s_ch_ph_t">Tên danh sách phát</string>
    <string name="nh_p_t_n_danh_s_ch_ph_t">Nhập tên danh sách phát</string>
    <string name="danh_s_ch_m_i_1">Danh sách mới 1</string>
    <string name="ok">OK</string>
    <string name="ng_n_ng">Ngôn ngữ</string>
    <string name="vi_t_nam">Việt Nam</string>
    <string name="artist_name">artist_name</string>
    <string name="text_VN">Tiếng Việt</string>
    <string name="text_EN">Tiếng Anh</string>
    <string name="english">English</string>
    <string name="play">Play</string>
    <string name="b_i_h_t_ang_ph_t">Bài hát đang phát</string>
    <string name="recent">Recent</string>
    <string name="th_m_v_o_danh_s_ch_ph_t">Thêm vào danh sách phát sau</string>
    <string name="b_g_d">Xóa gần đây</string>
    <string name="b_y_u_th_ch">Bỏ Yêu Thích</string>
    <string name="b_n_mu_n_tho_t_ng_d_ng">Bạn muốn thoát ứng dụng?</string>
    <string name="tho_t">Thoát</string>


</resources>